feat: major update

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Happy birthday Icaaa🥳🎉!! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quisquam amet ipsam vitae, voluptatum architecto aliquid id quo error tempora quos aperiam magni necessitatibus quas ut, possimus nesciunt nam ad.
+                Happy birthday Icaaa🥳🎉!! Selamat ulang tahun yang ke 21 tahun. Semoga setiap doa, harapan, wishlistnya bisa tercapai, dan selalu dikelilingi orang orang baik. I hope you'll always be a amazing and energic person who brings positive vibes around you🤩. Enjoy your special day!!!🥳💫
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
         </div>
 
         <div class="five">
-            <p class="idea-1">That's what I was going to do.</p>
+            <p class="idea-1">That's all I want to say.</p>
             <p class="idea-2">But then I stopped.</p>
             <p class="idea-3">
                 I realised, I wanted to do something<br>
@@ -61,15 +61,16 @@
             <p class="idea-6">
                 <span>S</span>
                 <span>O</span>
+                <span>?</span>
             </p>
         </div>
 
         <div class="six">
-            <img src="./img/irene.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+            <img src="./img/miko.png" alt="MIKOOO" class="profile-picture" id="imagePath"/>
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy   Birthday!</h3>
-                <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+                <h5 id="wishText">"Hope you keep living life with passion and always be my mood booster!"! ;)</h5>
             </div>
         </div>
 
@@ -142,7 +143,7 @@
         </div>
 
         <div class="nine">
-            <p>Okay, enjoy your birthday yaaa!!.</p>
+            <p>Okay that's it, enjoy your birthday yaaa!!.</p>
             <p id="replay">Klik lagi, kalau mau dilihat ulang</p>
             <p class="last-smile">:)</p>
         </div>
