--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
         <div class="nine">
             <p>Okay that's it, enjoy your birthday yaaa!!.</p>
-            <p id="replay">Klik lagi, kalau mau dilihat ulang</p>
+            <p id="replay">Klik ini, kalau mau dilihat ulang</p>
             <p class="last-smile">:)</p>
         </div>
     </div>
