--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
             <img src="./img/miko.png" alt="MIKOOO" class="profile-picture" id="imagePath"/>
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
-                <h3 class="wish-hbd">Happy   Birthday!</h3>
-                <h5 id="wishText">"Hope you keep living life with passion and always be my mood booster!"! ;)</h5>
+                <h3 class="wish-hbd">Happy Birthday!</h3>
+                <h5 id="wishText">"Hope you keep living life with passion and always be my mood booster!" ;)</h5>
             </div>
         </div>
 
