--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         </div>
 
         <div class="nine">
-            <p>Okay that's it, enjoy your birthday yaaa!!.</p>
+            <p>Okay that's it, enjoy your birthday yaaa!!. Bye👋</p>
             <p id="replay">Klik ini, kalau mau dilihat ulang</p>
             <p class="last-smile">:)</p>
         </div>
