:feat minor changes paragraph

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Happy birthday Icaaa🥳🎉!! Selamat ulang tahun yang ke 21 tahun. Semoga setiap doa, harapan, wishlistnya bisa tercapai, dan selalu dikelilingi orang orang baik. I hope you'll always be a amazing and energic person who brings positive vibes around you🤩. Enjoy your special day!!!🥳💫
+                Happy birthday Icaaa🥳🎉!! Selamat ulang tahun yang ke 21 tahun. Semoga setiap doa, harapan, wishlistnya bisa tercapai, dan selalu dikelilingi orang orang baik. I hope you'll always be an amazing and energic person who brings positive vibes around you🤩. Enjoy your special day!!!🥳💫
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
